--- a/.github/workflows/small.yml
+++ b/.github/workflows/small.yml
@@ -1,6 +1,8 @@
 name: Sync packages
 
 on:
+  repository_dispatch:
+  workflow_dispatch:
   push:
     paths:
       - '.github/workflows/small.yml'
@@ -9,7 +11,7 @@ on:
     - cron: 0 */12 * * *
   watch:
     types: started
-  repository_dispatch:
+
 
 jobs:
   build:
